# AgentAgent

./: .env.enc  .env.example  .gitignore  .sops.yaml  README.md  app_one_prompt.py  app_sup_style.py  example.py  experiment.ipynb  gemini_phase1.py  kill_human.py  langgraph.json  langlang-graphgraph.ipynb  ollama_experiment.py  pyproject.toml  rag_experiment.ipynb  requirements.txt  test_gemini_full.ipynb  tool_integration.ipynb  userprompt_to_json.py
.devcontainer/: devcontainer.json
.github/workflows/: run_test.yml
deployment/: lambda_wrapper.py
deployment/deployment_aws_lambda_cdk/: app.py
deployment/deployment_aws_sdk/: log.txt
deployment/deployment_e2b/: e2b.Dockerfile  e2b_demo.py
deployment/langgraph_cloudrun/: Dockerfile
deployment/local_docker_setup/: app.py  client.py  langgraph.json
deployment/vertex_deployment/: agent.py
docker/: requirements.txt
experiments/: e2b_langgraph.ipynb  e2b_sample.json  full_formed_snippet.py  gemini_phase1.py  gemini_phase1_cleaned.ipynb  gemini_phase1_toolgen.py  gemini_test.ipynb  gemini_test_kanishk.ipynb  new_ex.ipynb  phase1_aaj_jsonify.ipynb  phase1_e2b_compilation.ipynb  phase1_edge_handling.ipynb  phase1_edge_handling_execute.ipynb  phase1_json_dfs.ipynb  phase1_json_dfs.py  phase1_node_to_code.ipynb  phase1_node_to_code_execute.ipynb  phase1_stategraph_to_code.ipynb  phase_1_canidateagent.ipynb  phase_1_pipeline.ipynb  sample.json  updated_prompt_phase1.ipynb  userprompt_to_json.py  yaml_to_reactflow_json.ipynb
experiments/agent_final/: dynamic_example.ipynb  updated_prompt_phase1.ipynb  updated_prompt_phase1.py
experiments/agent_testing_flow/: agent_testing.ipynb  eval_pipeline.ipynb  final_eval_code.py  model_factory.py  phase2_e2b_testing_infra.ipynb  phase2_generating_test_cases.ipynb  phase2_mock_generation.ipynb  pytest_writing_tools.py  samples.py
experiments/architecture_gather/: example_arch.ipynb  get_lg_architectures.ipynb
experiments/candidate_agent_dev_server/: agent_agent.py  langgraph.json
experiments/composio_testing/: langgraph_quickstart.py  quickstart.py  testing_composiotoolset.py
experiments/edge_to_code/: edge_to_code.py
experiments/infogathering/: hld_generation_experiment.ipynb
experiments/langgraph_rag_experiment/: agentic_RAG.ipynb  embedding_pipeline.ipynb
experiments/models/: agent_architecture.py
experiments/node_to_code/: node_to_code.py  node_to_code_base.py  node_to_code_interrupt.py  node_to_code_planner.py  node_to_code_prompt.py  node_to_code_replan.py  node_to_code_struct.py  node_to_code_sup.py  node_to_code_toolset.py
experiments/tool_creation/: initial_testing.ipynb  tools_link_json.json
experiments/utils/: dependency_setup.py  fetch_docs.py  yaml_builder.py
experiments/visualization/: langgraphjson_to_reactjson.ipynb
files/: tools_doc_json.json
final_code/llms/: model_factory.py
final_code/nodes/: code_generation_node.py  code_reflection_node.py  combine_code_node.py  composio_toolset_builder.py  dfs_analysis_node.py  evaluation_node.py  extract_env_var_node.py  json_generation_node.py  native_tool_builder.py  req_analysis_node.py  tool_generation_node.py  tool_generation_nodev2.py  tool_interrupt.py
final_code/nodes_sup_style/: phase1_json_dfs.py
final_code/pydantic_models/: UtGen.py
final_code/states/: AgentBuilderState.py  AgentInstructions.py  ArchEvaluations.py  CodeEvalState.py  DryRunState.py  NodesAndEdgesSchemas.py  ToolBuilderState.py
final_code/utils/: MockJsonSchema.py  copilotkit_interrupt_temp.py  create_e2b_exe_cmd.py  dict_to_reactflow.py  diff_patch.py
interrupt_responses/: crm_composio.json
src/: app_one_prompt.py
src/deployment/: client.py
src/tests/: test_code_gen.py  test_ut_writer.py
src/webscraping/: visited_urls_promptguide.json
src_folder/: ahitl_agent.py  app_one_prompt.py  gui_agent.py
src_folder/experiments/: code_reflection_agent.py  gemini_phase1_cleaned.ipynb  phase1_e2b_compilation_execute.ipynb  phase1_json_dfs_execute.ipynb  phase1_node_to_code_execute.ipynb
src_folder/files/: tools_link_json.json
src_folder/interrupt_responses/: README.md
src_folder/sample_good_agents/: nutrition_test.py  nutrition_test_2.py
src_folder/tests/: conftest.py  test_code_gen.py  (+7 more)
swarmagent/: agent.ipynb  utils.py
tests/: code_ast_module_example.py  test_code_gen.py  test_ut_writer.py
webscraping/: github_urls.json  scrape_off_url.py  url1.md  url2.md  visited_urls_langchain.json  visited_urls_langgraph.json  visited_urls_langsmith.json  visited_urls_mcp.json  webscraper.py
(+202 files in other folders)
