[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "composio-langchain==1.0.0rc5",
    "composio[langchain]==1.0.0rc5",
    "copilotkit==0.1.70",
    "dotenv>=0.9.9",
    "e2b-code-interpreter>=1.2.1",
    "fastapi>=0.115.12",
    "google-cloud-aiplatform>=1.94.0",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "langchain>=0.3.24",
    "langchain-anthropic>=0.3.12",
    "langchain-community>=0.3.23",
    "langchain-google-genai>=2.1.4",
    "langchain-openai>=0.3.14",
    "langchain-tavily>=0.2.3",
    "langgraph==1.0.2",
    "langsmith>=0.3.38",
    "openevals>=0.0.19",
    "promptius-gui-schema>=2.0.8",
    "psycopg[binary,pool]>=3.2.9",
    "pydantic>=2.11.3",
    "setuptools>=80.9.0",
]


[project.optional-dependencies]
github = [
    "uvloop>=0.21.0",
    "pytest>=8.3.5",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.2.1",
]
dev = [
    "agentevals>=0.0.9",
    "langgraph-api>=0.4.11",
    "langgraph-cli[inmem]>=0.3.6",
    "langgraph-sdk>=0.1.66",
    "aws-cdk-lib>=2.194.0",
    "import-ipynb>=0.2",
    "ipykernel>=6.29.5",
    "unidiff>=0.7.5",
    "bs4>=0.0.2",
    "boto3>=1.38.8",
    "langchain-pinecone>=0.2.5",
    "langgraph-sdk>=0.1.66",
    "langgraph-supervisor>=0.0.21",
    "langgraph-reflection>=0.0.1",
    "requests>=2.32.3",
]

[tool.setuptools.packages.find]
where = ["src_folder"]          # only look inside src/
include = ["final_code*"] # only include final_code package and subpackages

